--- a/csc372-hw/hw2/index.css
+++ b/csc372-hw/hw2/index.css
@@ -9,11 +9,13 @@ h1 {
     background-color: lightblue;
     font-size: 22px;
     text-decoration: underline;
+    display: inline-block;
 }
 
 #page-title {
     font-size: 22px;
     background-color: lightblue;
     text-align: center;
+    display: inline-block;
 }
 
